# minimal-python-template

./: README.md  pyproject.toml
tests/: test_example.py
